@@ -527,6 +527,10 @@ Major new features in this release
 2.9.5: (released ????-??-??)
 ----------------------------
 
+All:
+
+- Add wxDir::Close() method (Silverstorm82).
+
 All (GUI):
 
 - Add possibility to hide and show again wxRibbonBar pages (wxBen).
